--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,13 @@ exportMethods(
     "head",
     "print",
     "show",
-    "typeof" 
+    "typeof",
+    "hashDimnames",
+    "hashedRownames",
+    "hashedColnames",
+    "hashedDimnames",
+    "isHashed",
+    "makeIndex"
 )
 exportClasses(
     "h5array",
@@ -23,3 +29,4 @@ exportClasses(
 import(rhdf5)
 import(methods)
 import(pryr)
+import(hash)
